[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/Box/Left_script.gd" type="Script" id=1]
[ext_resource path="res://assets/box/Leftm6.png" type="Texture" id=2]
[ext_resource path="res://assets/box/Leftm5.png" type="Texture" id=3]
[ext_resource path="res://assets/box/Leftm2.png" type="Texture" id=4]
[ext_resource path="res://assets/box/Leftm3.png" type="Texture" id=5]
[ext_resource path="res://assets/box/Leftm1.png" type="Texture" id=6]
[ext_resource path="res://assets/box/Leftm4.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.5, 22.5 )

[node name="Left" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -1.5 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Left_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Left_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Left_mouse_exited"]
